--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 			<a href="https://www.google.com/">Gmail</a>
 			<a href="https://www.google.com/">Images</a>
 
-			<a class= "drawer" href="www.google.com"><img src="images/google-apps.png" alt="app-drawer" width="25" length="25"></a>
+			<a class= "drawer" href="www.google.com"><img id="drawer-square" src="images/google-apps.png" alt="app-drawer" ></a>
 
-			<a class= "notif" href="www.google.com"><img src="images/google-notifications.png" alt="sign-in" width="30" height="30"></a>
-			<a><button type="button">Sign In</button></a>
+			<a class= "notif" href="www.google.com"><img id="notications" src="images/google-notifications.png" alt="sign-in"></a>
+
+			<button type="button">Sign In</button>
 		</nav>
 	</header>
 
@@ -26,8 +27,8 @@
 			<img src="images/google.png" alt="Google main image" class="center">
 		</div>	
 		<div id="form">
-			<input type="text" id="form-search" placeholder="Search Google">
-			<a href="www.google.com"><img src="images/microphone.png" alt="microphone"></a>
+			<input id="search-bar" placeholder="Search Google">
+			<img id="mic" src="images/microphone.png" alt="microphone">
 		</div>
 		<div id="buttons">	
 			<input type="submit" value="Google Search" id="google-search">
@@ -49,4 +50,3 @@
 	</footer>	
 </body>
 </html>
-s
